--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -151,13 +151,16 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
                 <br />
                 <div ng-if="$root.permisoscalculados.superuser">
                     <div>
-                        <button type="button" ng-if="!procedimientoSeleccionado.oculto" class="btn btn-default" aria-label="Left Align" ng-click="ocultarProcedimiento(procedimientoSeleccionado)">
+                        <button type="button" ng-if="!procedimientoSeleccionado.oculto" class="btn btn-warning" aria-label="Left Align" ng-click="ocultarProcedimiento(procedimientoSeleccionado)">
                             <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> &nbsp;Ocultar
                         </button>
                         <button type="button" ng-if="procedimientoSeleccionado.oculto" class="btn btn-default" aria-label="Left Align" ng-click="ocultarProcedimiento(procedimientoSeleccionado)">
                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> &nbsp;Anular Oculto
                         </button>
-                        <button type="button" ng-if="!procedimientoSeleccionado.eliminado" class="btn btn-default" aria-label="Left Align" ng-disabled="tieneHijos > 0 || procedimientoSeleccionado.oculto"  ng-click="eliminarProcedimiento(procedimientoSeleccionado)">
+                        <button type="button" ng-if="!procedimientoSeleccionado.eliminado" class="btn btn-danger" aria-label="Left Align" ng-disabled="tieneHijos > 0 || procedimientoSeleccionado.oculto"  ng-click="resetData()">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Resetear procedimiento
+                        </button>
+                        <button type="button" ng-if="!procedimientoSeleccionado.eliminado" class="btn btn-danger" aria-label="Left Align" ng-disabled="tieneHijos > 0 || procedimientoSeleccionado.oculto"  ng-click="eliminarProcedimiento(procedimientoSeleccionado)">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Eliminar procedimiento
                         </button>
                         <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="descargarExcel()">
