--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -107,7 +107,7 @@
 			</thead>
 			<tfoot>
 				<tr>
-					<th>Pulse en esta fila para ver los detalles por meses</th>
+					<th>Pulse en esta fila para ver los detalles por meses <span ng-click="$root.exportXLS('procedimientostable','informegeneral')" class="pull-right glyphicon glyphicon-floppy-disk"></span></th>
 					<th class="cursor" colspan="{{columnasocultas ? 1 : 3}}" ng-click="setDetallado(seleccionado)" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.title}}</th>
 					<th class="cursor" colspan="{{columnasocultas ? 1 : 3}}" ng-repeat="nodo in seleccionado.nodes" ng-click="setDetallado(nodo)" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.title}}</th>
 				</tr>
@@ -225,7 +225,7 @@
 		<p><button class="button btn" ng-click="mostrarcolumnasocultas()">Mostrar columnas ocultas</button></p>
 		<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesNodo" ng-If="detallado">
 			<h3>{{detallado.title}}</h3>
-			<table class="table table-striped table-bordered table-condensed table-hover full">
+			<table class="table table-striped table-bordered table-condensed table-hover full" id="detallestable">
 				<caption>2014</caption>
 				<thead>
 					<tr>
@@ -233,6 +233,13 @@
 						<th ng-repeat="mes in $root.meses">{{mes}}</th>
 					</tr>
 				</thead>
+				<tfoot>
+					<tr>
+						<th colspan="2">
+							<span ng-click="$root.exportXLS('detallestable','informe_mensual')" class="pull-right glyphicon glyphicon-floppy-disk"></span>
+						</th>
+					</tr>
+				</tfoot>
 				<tbody>
 					<tr>
 						<th>Solicitados</th>
