--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -90,14 +90,8 @@
 		</div>
 	</div>
 	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesjerarquia" ng-If="seleccionado ">
-		<div class="cursor" ng-click="mutextoculto()">
-			<span class="glyphicon glyphicon-fullscreen pull-right">
-			</span>
-			<h2>
-				{{seleccionado.title}}
-			</h2>
-		</div>
 		<table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable">
+			<caption ng-click="mutextoculto()" class="cursor"> <span class="glyphicon glyphicon-fullscreen pull-right"></span> <h2>{{seleccionado.title}}</h2></caption>
 			<thead>
 				<tr>
 					<th>Pulse para seleccionar una jerarquía más específica</th>
@@ -133,100 +127,99 @@
 				<tr class="info">
 					<th>AÑO 2013</th>
 					<th style="text-align:center" ng-class="{'warning': detallado.id==seleccionado.id}">TOTALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">MEDIAS MENSUALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">MEDIAS MENSUALES</th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
 					<th style="text-align:center" ng-repeat-start="nodo in seleccionado.nodes" ng-class="{'warning': detallado.id==nodo.id}">TOTALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">MEDIAS MENSUALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">MEDIAS MENSUALES</th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
 				</tr>
 				<tr>
 					<th>Resueltos en 2013 totales</th>
 					<th style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2013, 'total_resueltos') | numberFormat}}</th>
-					<th ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2013, 'total_resueltos')/12).toFixed(2) | numberFormat}}</th>
-					<th ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
+					<th ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2013, 'total_resueltos')/12).toFixed(2) | numberFormat}}</th>
+					<th ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
 					<th ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2013, 'total_resueltos') | numberFormat}}</th>
-					<th ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2013, 'total_resueltos')/12).toFixed(2) | numberFormat}}</th>
-					<th ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
+					<th ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2013, 'total_resueltos')/12).toFixed(2) | numberFormat}}</th>
+					<th ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
 				</tr>
 				<tr class="info">
 					<th>AÑO 2014</th>
 					<th style="text-align:center" ng-class="{'warning': detallado.id==seleccionado.id}">TOTALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">MEDIAS MENSUALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">MEDIAS MENSUALES</th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
 					<th style="text-align:center" ng-repeat-start="nodo in seleccionado.nodes" ng-class="{'warning': detallado.id==nodo.id}">TOTALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">MEDIAS MENSUALES</th>
-					<th style="text-align:center" ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">MEDIAS MENSUALES</th>
+					<th style="text-align:center" ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
 				</tr>
 				<tr>
 					<th>Solicitados</th>
 					<td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, 'solicitados') | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, 'solicitados')/12).toFixed(2) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, 'solicitados')/12).toFixed(2) | numberFormat}}</td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
 					<td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, 'solicitados') | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2014, 'solicitados')/12).toFixed(2) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2014, 'solicitados')/12).toFixed(2) | numberFormat}}</td>
+					<td ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
 				</tr>
 				<tr>
 					<th>Iniciados</th>
 					<td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, 'iniciados') | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, 'iniciados')/12).toFixed(2) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, 'iniciados')/12).toFixed(2) | numberFormat}}</td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
 					<td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, 'iniciados') | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2014, 'iniciados')/12).toFixed(2) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                  
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2014, 'iniciados')/12).toFixed(2) | numberFormat}}</td>
+					<td ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                  
 				</tr>
 				<tr>
 					<th>Resueltos totales</th>
 					<td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, 'total_resueltos') | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, 'total_resueltos')/12).toFixed(2) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, 'total_resueltos')/12).toFixed(2) | numberFormat}}</td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
 					<td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, 'total_resueltos') | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
-					<td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                    
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+					<td ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                    
 				</tr>
 				<tr>
 					<th>{{'t_medio_habiles' | translate }}</th>
 					<td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{fnGetStatsNode(seleccionado.id, 2014).value['t_medio_habiles_anual'].avg | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
 					<td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{fnGetStatsNode(nodo.id, 2014).value['t_medio_habiles_anual'].avg | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
-					<td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                    
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+					<td ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                    
 				</tr>
 				<tr>
 					<th>{{'t_medio_naturales' | translate }}</th>
 					<td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{fnGetStatsNode(seleccionado.id, 2014).value['t_medio_naturales_anual'].avg | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
 					<td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{fnGetStatsNode(nodo.id, 2014).value['t_medio_naturales_anual'].avg | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
-					<td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                    
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+					<td ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                    
 				</tr>
 				<tr>
 					<th>Pendientes (a final de periodo= ultimos pendientes)</th>
 					<td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{fnGetStatsNode(seleccionado.id, 2014).value.pendientes[11]| numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
 					<td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{fnGetStatsNode(nodo.id, 2014).value.pendientes[11]  | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
-					<td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+					<td ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
 				</tr>
 				<tr ng-repeat="campo in campos">
 					<th>{{campo | translate}}</th>
 					<td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, campo) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, campo)/12).toFixed(2) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">{{(getTotales(seleccionado.id, 2014, campo)/12).toFixed(2) | numberFormat}}</td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
 					<td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, campo) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2014, campo)/12).toFixed(2) | numberFormat}}</td>
-					<td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
+					<td ng-if="!columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">{{(getTotales(nodo.id, 2014, campo)/12).toFixed(2) | numberFormat}}</td>
+					<td ng-if="!columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
 				</tr>
 			</tbody>
 		</table>
 		<p><button class="button btn" ng-click="mostrarcolumnasocultas()">Mostrar columnas ocultas</button></p>
 		<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesNodo" ng-If="detallado">
-			<h3>{{detallado.title}}</h3>
 			<table class="table table-striped table-bordered table-condensed table-hover full" id="detallestable">
-				<caption>2014</caption>
+				<caption><h3>{{detallado.title}}</h3> 2014</caption>
 				<thead>
 					<tr>
 						<th>Indicador</th>
@@ -235,8 +228,8 @@
 				</thead>
 				<tfoot>
 					<tr>
-						<th colspan="2">
-							<span ng-click="$root.exportXLS('detallestable','informe_mensual')" class="pull-right glyphicon glyphicon-floppy-disk"></span>
+						<th colspan="13">
+							<span ng-click="$root.exportXLS('detallestable', 'informe_mensual')" class="pull-right glyphicon glyphicon-floppy-disk"></span>
 						</th>
 					</tr>
 				</tfoot>
