--- a/public/partials/incoherencias.html
+++ b/public/partials/incoherencias.html
@@ -10,23 +10,32 @@
 		</form>
 		<img src="/imgs/loading.gif" ng-if="!idsencomun || idsencomun.length==0"/>
 		<div ng-if="idsencomun &amp;&amp; idsencomun.length!=0" class="table-resposive col-lg-12">
-			<table class="table table-striped table-bordered table-hover table-condensed">
+			<table class="table table-striped table-bordered table-hover table-condensed" id="table">
 				<thead>
 					<tr>
-						<th>ID</th>
+						<th></th>
 						<th colspan="{{camposexcel.length + 2 }}" class="text-center">SICI</th>
 						<th colspan="{{camposguia.length  +camposcrawled.length + 1 }}" class="text-center"> Web</th>
+						<th colspan="3">Banderas</th>
 					</tr>
 					<tr>
-						<th></th>
+						<th>ID</th>
 						<th>Denominación</th>
 						<th ng-repeat="c in camposexcel" class="text-center">{{c.split('.').pop() | translate}}</th>
 						<th>Jerarquía</th>
 						<th ng-repeat="c in camposguia" class="text-center">{{c.split('.').pop()}}</th>
 						<th ng-repeat="c in camposcrawled" class="text-center">{{c.split('.').pop()}}</th>
 						<th>Jerarquía</th>
+						<th>1</th>
+						<th>2</th>
+						<th>3</th>
 					</tr>
 				</thead>
+				<tfoot>
+					<tr>
+						<th colspan="7"><span ng-click="$root.exportXLS('table', 'incoherencias')" class="pull-right glyphicon glyphicon-floppy-disk"></span></th>
+					</tr>
+				</tfoot>
 				<tbody>
 					<tr ng-repeat="(k,val) in idsencomun |orderBy:'val.id'" ng-class="{'danger': !val.procedimiento || !val.crawled,'info': testwarning(val) }">
 						<th>
@@ -36,9 +45,6 @@
 							</span>
 						</th>
 						<td>
-							<div class="pull-right">
-								<span ng-if="val.procedimiento" class="badge">{{val.procedimiento ? val.procedimiento[anualidad].totalsolicitudes : 0}}</span>
-							</div>
 							<span>{{val.procedimiento ? val.procedimiento.denominacion :''}}</span>
 						</td>
 						<td ng-repeat="c in camposexcel" class="text-center">{{val.procedimiento ? (val.procedimiento | extractFromPath :c) : '' }}</td>
@@ -61,9 +67,20 @@
 								<li ng-repeat="j in val.crawled.jerarquia">{{j}}</li>
 							</ul>
 						</td>
+						<td>{{val.procedimiento ? 1 : 0}}</td>
+						<td>{{val.crawled ? 1 : 0}} </td>
+						<td>{{testwarning(val) ? 1 : 0}} </td>
 					</tr>
 				</tbody>
 			</table>
+			<p>
+				Significado de las columnas de banderas:
+				<ol>
+					<li>El procedimiento está definido en SICI = 1, el procedimiento no está definido en SICI = 0.</li>
+					<li>El procedimiento está definido en la web de la CARM = 1, el procedimiento no está definido en la web de la CARM = 0.</li>
+					<li>Puede existir una incoherencia entre el número de días registrado en SICI con respecto al publicado en la web de la CARM = 0, en caso contratrio = 1. Nota: esta detección puede fallar.</li>
+				</ol>
+			</p>
 		</div>
 	</div>
 </div>
