--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -223,7 +223,7 @@
 					</td>
 					<td>{{procedimiento.cod_plaza}}</td>
 					<td>{{usuariodetalle.nombre}} {{usuariodetalle.apellidos}}</td>
-					<td><a href="/admin/procedimiento/{{procedimiento.codigo}}" title="{{procedimiento.codigo}}">[{{procedimiento.codigo}}] <span class="visible-lg visible-md">{{procedimiento.denominacion}}</span></a></td>
+					<td><a href="/procedimiento/{{procedimiento.codigo}}" title="{{procedimiento.codigo}}">[{{procedimiento.codigo}}] <span class="visible-lg visible-md">{{procedimiento.denominacion}}</span></a></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>					
