--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -89,8 +89,8 @@
 			</div>
 		</div>
 	</div>
-	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesjerarquia" ng-If="seleccionado ">
-		<table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable">
+	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesjerarquia" ng-If="seleccionado ">		
+		<table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable" ng-If="tienePermiso(seleccionado)">
 			<caption ng-click="mutextoculto()" class="cursor"> <span class="glyphicon glyphicon-fullscreen pull-right"></span> <h2>{{seleccionado.title}}</h2></caption>
 			<thead>
 				<tr>
